fix sizing of cover page on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ body {
 
 @media only screen and (max-width: 1000px) {
   .cover-page {
-    padding-top: 100px;
+    padding-top: 250px;
   }
 }
 
@@ -69,7 +69,7 @@ body {
   font-weight: 400;
   line-height: 30px;
   text-align: center;
-  max-width: 500px;
+  max-width: 56vh;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -77,6 +77,7 @@ body {
 @media only screen and (max-width: 1000px) {
   .description {
     font-size: 1rem;
+    max-width: 40vh;
   }
 }
 
